<resources>
    <string name="app_name">BitBd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Account Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_withdraw">Withdraw</string>
    <string name="menu_transaction">Transaction</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">UserID or Email</string>
    <string name="usernameEnter">Enter your username</string>
    <string name="password">Password</string>
    <string name="passwordEnter">Enter your password</string>
    <string name="login">Log In</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_description">Describe</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="notice">Notifications</string>
    <string name="noticeDetails">Notification Details</string>
    <string name="menu_affiliate">Affiliate</string>
    <string name="phone_number">Phone Number</string>
    <string name="mail">Email</string>
    <string name="conf_password">Conform Password</string>
    <string name="updateProf">Update Profile</string>
    <string name="name">Name</string>
    <string name="usernameHint">User ID</string>
    <string name="password_match">Both passwords doesn\'t match</string>
    <string name="takePicture">Click New</string>
    <string name="selectFromFolder">Select from folder</string>
    <string name="date">Date</string>
    <string name="accName">Acc\n Name</string>
    <string name="transAccNo">Trx\n Acc No.</string>
    <string name="tryType">Trx\n Type</string>
    <string name="trxId">Trx Id</string>
    <string name="trxAmount">Amount</string>
    <string name="status">Status</string>
    <string name="action">Act</string>
    <string name="transAccNumber">Trx Acount No</string>
    <string name="trxIdNumber">Trx ID Number</string>
    <string name="coin">Coin</string>
    <string name="enterTransAccNumber">Enter Trx Account No</string>
    <string name="enterTrxIdNumber">Enter Trx ID Number</string>
    <string name="enterArxAmount">Enter Trx Amount</string>
    <string name="submit">Submit</string>
    <string name="depositDetails">Add New Deposit</string>
    <string name="trxScreenSt">Trx Screenshot Image</string>
    <string name="transAccType">Type </string>
    <string name="selectType">Select Type</string>
    <string name="transAcc">Account</string>
    <string name="selectAccount">Select Account</string>
    <string name="balanceHint">"Your available balance is : "</string>
    <string name="withdrawHint">Withdraw Allow Dates :</string>
    <string name="type">Type</string>
    <string name="commission">Commission</string>
    <string name="refUser">Reference\n User</string>
    <string name="accounts">Accounts</string>
    <string name="accountNo">Acount No</string>
    <string name="branch">Branch</string>
    <string name="trxAccountNumber">Account Number</string>
    <string name="enterArxAccountNumber">Enter Account Number</string>
    <string name="trxAccountName">Account Name</string>
    <string name="enterArxAccountName">eg : bKash/nagad/DBBL</string>
    <string name="RadioButton1">Active</string>
    <string name="RadioButton2">Inactive</string>
    <string name="trxAccountStatus">Account Status</string>
    <string name="accountsEdit">Edit Account</string>
    <string name="trxBranchName">Branch Name</string>
    <string name="enterBranchName">Enter Branch Name</string>
    <string name="verifyOtp">Verify</string>
    <string name="sendOtp">Send OTP</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="mobileEnter">ex : 01*******9</string>
    <string name="submitOtp">Submit OTP</string>
    <string name="RequestOtp">Request To Verify</string>
    <string name="verifyYourOtp">Verify OTP</string>
    <string name="otpHint">00000</string>
    <string name="messageUs">Message To BIT BD</string>
    <string name="jivosdk_welcome">Hello, how can we help you ?</string>
</resources>