<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_menu_deposit"
            android:title="@string/menu_deposit" />
        <item
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/ic_menu_withdraw"
            android:title="@string/menu_withdraw" />
        <item
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_menu_transaction"
            android:title="@string/menu_transaction" />
        <item
            android:onClick="logOutFromApplication"
            app:iconTint="@color/teal_200"
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_baseline_logout"
            android:title="@string/menu_logOut" />
    </group>
</menu>