<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.bitbd.ui.fragment.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.bitbd.ui.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.bitbd.ui.fragment.transaction.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" />
    <fragment
        android:id="@+id/nav_withdraw"
        android:name="com.example.bitbd.ui.fragment.withdraw_money.WithdrawFragment"
        android:label="@string/menu_withdraw"
        tools:layout="@layout/fragment_withdraw" />
    <fragment
        android:id="@+id/nav_affiliate"
        android:name="com.example.bitbd.ui.fragment.affiliate.AffiliateFragment"
        android:label="@string/menu_affiliate"
        tools:layout="@layout/fragment_affiliate" />
    <fragment
        android:id="@+id/nav_deposit"
        android:name="com.example.bitbd.ui.fragment.deposit.DepositsContainerFragment"
        android:label="@string/menu_deposit"
        tools:layout="@layout/fragment_deposits_container" />
</navigation>