<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="15"
    android:id="@+id/depositItem"
    android:orientation="horizontal"
    android:layout_height="64dp">


    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/date"
        android:id="@+id/Date"
        android:layout_weight="1.8"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/accName"
        android:id="@+id/AccountName"
        android:layout_weight="2.2"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/transAccNo"
        android:id="@+id/TrxAccNumber"
        android:layout_weight="2.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/tryType"
        android:id="@+id/TrxType"
        android:layout_weight="1.7"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/trxId"
        android:id="@+id/TrxID"
        android:layout_weight="2.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/trxAmount"
        android:id="@+id/Amount"
        android:layout_weight="1.7"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/status"
        android:id="@+id/Status"
        android:layout_weight="1.6"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/action"
        android:id="@+id/Action"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <ImageView
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/ActionPerform"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_delete_24"
        android:padding="4dp"
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:targetApi="m"
        tools:ignore="UnusedAttribute" />

</LinearLayout>