<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="6"
    android:id="@+id/baseItem"
    android:orientation="horizontal"
    android:layout_height="64dp">


    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/name"
        android:id="@+id/name"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/type"
        android:id="@+id/type"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/accountNo"
        android:id="@+id/accountNo"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/branch"
        android:id="@+id/branch"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/status"
        android:id="@+id/status"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <TextView
        android:textColor="@color/black"
        android:background="@drawable/itemshape"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/action"
        android:id="@+id/action"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

   <LinearLayout
       android:visibility="visible"
       android:id="@+id/ActionPerform"
       android:weightSum="2"
       android:orientation="vertical"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1">

       <ImageView
           android:clickable="true"
           android:focusable="true"
           android:foreground="?android:attr/selectableItemBackground"
           android:id="@+id/deletePerform"
           android:src="@drawable/ic_baseline_delete_24"
           android:padding="4dp"
           android:background="@color/white"
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           tools:targetApi="m"
           tools:ignore="NestedWeights,UnusedAttribute" />
       <ImageView
           android:clickable="true"
           android:focusable="true"
           android:foreground="?android:attr/selectableItemBackground"
           android:id="@+id/editPerform"
           android:src="@drawable/ic_baseline_edit_note_24"
           android:padding="4dp"
           android:background="@color/white"
           android:layout_weight="1"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           tools:targetApi="m"
           tools:ignore="NestedWeights,UnusedAttribute" />

   </LinearLayout>

</LinearLayout>